<resources>
    <string name="app_name">Oxtor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>

    <string name="app_url">"https://oxt.web.app"</string>
    <string name="dynamic_link">oxtor.page.link/</string>
    <string name="package_name">teamarmada.oxtor</string>
    <string name="title_login">Login</string>
    <string name="signout">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="user_name">Name</string>
    <string name="email">Email</string>
    <string name="enter_the_message">Enter the message</string>
    <string name="user_name_message">Message</string>
    <string name="nightmode">Night mode</string>
    <string name="contactsupport">Contact support</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enablenightmode">Enable Dark Mode</string>
    <string name="sort">Sort</string>
    <string name="weblogin">WEB LOGIN</string>
    <string name="navigation_login">Login</string>
    <string name="changetheme">Change Theme</string>
    <string name="title_notification">Notifications</string>
    <string name="emailsignin">Sign in with Email</string>
    <string name="setting">Settings</string>
    <string name="sortbysize">Sort by Size (Large to Small)</string>
    <string name="sortbytime">Sort by Timestamp (Old to New)</string>
    <string name="sortbyname">Sort by Name (A to Z)</string>
    <string name="filename">File Name</string>
    <string name="filesize">File Size</string>
    <string name="title_contacts">Contacts</string>
    <string name="timestamp">Timestamp</string>
    <string name="totalitemshared">Total Item Shared</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="uploadtask">Upload Tasks</string>
    <string name="downloadtask">Download Tasks</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="block">Block</string>
    <string name="sharewith">Share with</string>
    <string name="itemshared">Items Shared</string>
    <string name="searchresultpreview">Search Result Preview</string>
    <string name="title_sharedposts">Select Files to share</string>
    <string name="title_settings">Settings</string>
    <string name="selectfiles">Select Posts</string>
    <string name="remove">Remove</string>
    <string name="addfile">Add File</string>
    <string name="title_selectposts">Select Posts</string>
    <string name="title_selectcontacts">Select Contacts</string>
    <string name="add_audio">Add Audio Files</string>
    <string name="add_video">Add Video Files</string>
    <string name="add_image">Add Image Files</string>
    <string name="add_files">Add Doc Files</string>
    <string name="selectall">Select all</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="shareapost">Share a Post</string>
    <string name="addtocontact">Add to Contacts</string>
    <string name="save">Save</string>
    <string name="view_pending_task">View Pending Tasks</string>
    <string name="title_shared">Shared</string>
    <string name="rename">Rename</string>
    <string name="used_space">Used Space</string>
    <string name="available_space">Available Space</string>
    <string name="total_space">Total Space</string>
    <string name="clearalldata">Clear All Data</string>
    <string name="clear">Clear</string>
    <string name="sign_in_with_phone">Sign in with Phone</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="entermanually">Enter Manually</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="openoxtorweb">Web Page</string>
    <string name="create_share_link">Create Share Link</string>
    <string name="enter_email_to_share">Enter Email to Share</string>
    <string name="no_of_selected_files">No. of selected files</string>
    <string name="network_alert_message">No internet connection found, This may hamper user experience</string>
    <string name="check_connection">Connect to Internet</string>
    <string name="download_shared_post_message">"Download Post to View "</string>
    <string name="user_username">Username</string>
    <string name="Item_only_available_on_Local_storage">"Item is now only available on Local storage"</string>
    <string name="no_error">" "</string>
    <string name="create_username">Create username to enable sharing feature</string>
    <string name="ad_not_loaded">Error: Ad not loaded </string>
    <string name="retry">Retry</string>
    <string name="file_too_big">File too big</string>
    <string name="some_error_occurred">An Error Occurred</string>
    <string name="download_completed">Download Completed</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="renamed_successfully">Renamed Successfully</string>
    <string name="upload_completed">Upload Completed</string>
    <string name="enter_country_code">Enter valid number with country code</string>
    <string name="signed_in">Signed In</string>
    <string name="name_updated">Name Updated</string>
    <string name="username_updated">Username Updated</string>
    <string name="picture_updated">Picture Updated</string>
    <string name="account_deleted">Account Deleted</string>
    <string name="username_already_exists">Username already taken</string>
    <string name="enter_valid_username">Enter valid username</string>
    <string name="permission_rejected">You rejected the permission</string>
    <string name="grant">Grant</string>
    <string name="view_ad_to_start_download">View Ad to start Download</string>
    <string name="cancel_download">Cancel Download</string>
    <string name="view_ad">View Ad</string>
    <string name="view_ad_to_start_upload">View Ad to start Upload</string>
    <string name="cancel_upload">Cancel Upload</string>
    <string name="sort_settings_home">sort_settings_home</string>
    <string name="enter_Receivers_email_or_phone_number">Enter Username of Receiver</string>
    <string name="rename_file">Rename File</string>
    <string name="enter_sms_code">Enter sms code</string>
    <string name="update_name">Update name</string>
    <string name="update_username">Update Username</string>
    <string name="sort_settings_shared">sort_settings_shared</string>
    <string name="username_instruction">Start username with @ and dont any use special characters</string>
    <string name="set_username">Set Username</string>
    <string name="set_your_username">Create your username</string>
    <string name="task_started">Task Started</string>
    <string name="signed_outSi">Signed Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="india_country_code">+91</string>
    <string name="at">\@</string>
    <string name="expirydate">Expiry Date :</string>
    <string name="save_path">Saving at Downloads/Oxtor/</string>
    <string name="try_again">Try Again</string>
    <string name="share_notification_work">Share Notification Work</string>
    <string name="share_notification_channel">Share Notifications</string>
    <string name="support_notification_channel">Support Notifications</string>
    <string name="upload_work">Upload Work</string>
    <string name="download_work">Download Work</string>
    <string name="dont_use_any_special_character">Don\'t use any special characters</string>
    <string name="key_updated">Encryption key updated</string>
    <string name="enable_encryption">Enable encryption</string>
    <string name="encryption_key">Encryption Key</string>
    <string name="download_anyway">Download Anyway</string>
    <string name="update_encryption_key">Update encryption key</string>
    <string name="use_previous_key">Use previous key</string>
    <string name="about_app">About App</string>
    <string name="encryption_password">Encryption Password</string>
    <string name="webpage">Open Web</string>
    <string name="about">About</string>
    <string name="editname">Edit Name</string>
    <string name="editusername">Edit Username</string>
    <string name="editimage">Edit Image</string>
    <string name="display_picture">Display Picture</string>
    <string name="editpassword">Edit Password</string>
    <string name="update_password">Update password</string>
    <string name="isencrypted">"Encryped: "</string>
    <string name="generatenewtoken">Generate New Token</string>
    <string name="unselect_all_item">Unselect All</string>
    <string name="loading">Loading...</string>
    <string name="update_app">Update App</string>
    <string name="update_now">Update now</string>
    <string name="later">Later</string>
    <string name="dialog_update_available_message">A newer version of Oxtor is available on PlayStore</string>
    <string name="add_button">Add files to oxtor cloud storage</string>
    <string name="please_wait">Please wait...</string>
    <string name="send_message_to_a_user">Send message to a user</string>
    <string name="enter_username_of_user">Enter username of user</string>
    <string name="no_connection_found">No internet connection found</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="clear_cache">Clear cache</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audio">Audios</string>
    <string name="documents">Documents</string>
    <string name="deleted">Deleted</string>
    <string name="tabs">Tabs</string>
</resources>
