<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_bottomsheet_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout_top"
        android:background="?attr/colorSecondary">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:layout_weight="1"
            android:id="@+id/download_button"
            android:background="?attr/colorSecondary"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_weight="1"
            android:id="@+id/share_button"
            android:background="?attr/colorSecondary"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rename"
            android:id="@+id/rename_button"
            android:layout_weight="1"
            android:background="?attr/colorSecondary"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/delete_button"
            android:layout_weight="1"
            android:background="?attr/colorSecondary"/>

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearlayout_top"
        android:orientation="horizontal" />
</RelativeLayout>

</layout>