<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">



<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_bottomsheet_layout"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary"
        android:id="@+id/linearlayout_top">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:background="?attr/colorSecondary"
            android:textColor="?attr/colorOnPrimary"
            android:layout_weight="1"
            android:id="@+id/download_button" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:background="?attr/colorSecondary"
            android:textColor="?attr/colorOnPrimary"
            android:layout_weight="1"
            android:id="@+id/share_button" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondary"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/rename"
            android:id="@+id/rename_button"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondary"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/delete"
            android:id="@+id/delete_button"
            android:layout_weight="1" />

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearlayout_top"
        android:orientation="horizontal" />
</RelativeLayout>

</layout>