<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:id="@+id/navigation_profile"
      tools:context=".Fragments.ParentFragments.ProfileFragment"
      android:clickable="true">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dp_card"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <androidx.cardview.widget.CardView
          android:id="@+id/dpofuser_layout"
          android:layout_width="@dimen/width_of_dp"
          android:layout_height="@dimen/height_of_dp"
          app:cardCornerRadius="32dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dpofuser"
            android:layout_width="@dimen/width_of_dp"
            android:layout_height="@dimen/width_of_dp"
            android:layout_gravity="center"
            android:contentDescription="@string/display_picture"
            android:scaleType="centerCrop"
            android:background="?attr/colorPrimaryVariant"
            android:src="@drawable/ic_baseline_account_circle_24" />

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintStart_toEndOf="@+id/dpofuser_layout"
          android:layout_marginStart="-8dp"
          android:layout_marginBottom="8dp"
          app:cardCornerRadius="@dimen/corner_radius"
          app:layout_constraintBottom_toBottomOf="@id/dpofuser_layout">

        <ImageButton
            android:id="@+id/editimage"
            android:layout_width="@dimen/smallbuttonwidth"
            android:layout_height="@dimen/smallbuttonheight"
            android:background="?attr/colorSecondary"
            android:src="@drawable/ic_baseline_edit_24"
            android:contentDescription="@string/editimage" />


      </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin"
        android:id="@+id/emailofuser_layout"
        android:layout_below="@id/dp_card"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        app:cardCornerRadius="16dp"
        android:padding="4dp"
        app:cardElevation="0dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailofuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dp_card"
        android:background="?attr/colorOnPrimary"
        android:enabled="false"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/email"
        android:paddingVertical="8dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin"
        android:id="@+id/nameofuser_layout"
        android:layout_below="@id/emailofuser_layout"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        app:cardCornerRadius="16dp"
        android:padding="4dp"
        app:cardElevation="0dp">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/nameofuser"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="?attr/colorOnPrimary"
          android:clickable="true"
          android:focusable="true"
          android:enabled="false"
          android:inputType="text"
          android:hint="@string/user_name"
          android:maxLines="1"
          android:gravity="center"
          android:foregroundGravity="center"
          android:paddingVertical="8dp" />

      <ImageButton
          android:id="@+id/editname"
          android:layout_width="38dp"
          android:layout_height="match_parent"
          android:layout_gravity="end"
          android:background="?attr/colorSecondary"
          android:src="@drawable/ic_baseline_edit_24"
          android:contentDescription="@string/editname" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:id="@+id/username_layout"
        android:layout_below="@id/nameofuser_layout"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        app:cardCornerRadius="16dp"
        android:padding="4dp"
        app:cardElevation="0dp">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="?attr/colorOnPrimary"
          android:clickable="true"
          android:focusable="true"
          android:inputType="text"
          android:hint="@string/user_username"
          android:maxLines="1"
          android:enabled="false"
          android:gravity="center"
          android:foregroundGravity="center"
          android:paddingVertical="8dp" />

      <ImageButton
          android:id="@+id/editusername"
          android:layout_width="38dp"
          android:layout_height="match_parent"
          android:layout_gravity="end"
          android:background="?attr/colorSecondary"
          android:contentDescription="@string/editusername"
          android:src="@drawable/ic_baseline_edit_24" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_below="@id/username_layout"
        android:id="@+id/encryption_layout"
        android:orientation="vertical"
        >

      <androidx.appcompat.widget.SwitchCompat
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:text="@string/enable_encryption"
          android:id="@+id/encryption_switch"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="@string/encryption_password"
          android:padding="4dp"
          android:visibility="invisible"
          android:id="@+id/password"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/generatenewtoken"
          android:padding="4dp"
          android:visibility="invisible"
          android:textColor="?attr/colorSecondary"
          android:id="@+id/editpassword"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:id="@+id/storage_status_layout"
        android:layout_below="@id/encryption_layout"
        >
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_weight="3"

       >
          <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/used_space"
            android:text="@string/used_space"
            android:padding="4dp"
            />
          <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/available_space"
            android:padding="4dp"
            android:text="@string/available_space"/>

          <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_space"
            android:padding="4dp"
            android:text="@string/total_space"
            />


      </LinearLayout>

      <ImageButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_baseline_refresh_24"
          style="@style/Widget.AppCompat.Button.Borderless.Colored"
          android:layout_gravity="center_vertical"
          android:id="@+id/refresh_button"
          android:layout_weight="1"
          app:tint="?attr/colorSecondary" />


    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/space_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/storage_status_layout"
        app:trackThickness="2dp"
        app:indicatorColor="?attr/colorSecondary"
        app:trackColor="@color/white_grey"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginVertical="@dimen/margin_vertical"

       />


  </RelativeLayout>
  </ScrollView>
</layout>