<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fileitem_layout"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <com.ortiz.touchview.TouchImageView
            android:id="@+id/picture_of_file"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:background="?attr/colorPrimaryVariant"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_baseline_file_present_24"
            />

    <LinearLayout
        android:id="@+id/linearlayout_botttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/filename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_transparent"
            android:paddingHorizontal="@dimen/margin_horizontal"
            android:paddingVertical="@dimen/text_padding_vertical"
            android:text="@string/filename"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_transparent"
            android:paddingHorizontal="@dimen/margin_horizontal"
            android:paddingVertical="@dimen/text_padding_vertical">

            <TextView
                android:id="@+id/timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/timestamp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fileSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filesize"
                android:textColor="@color/white"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/isencrypted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/isencrypted"
                android:textColor="@color/white"
                android:textSize="16sp"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
