<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fileitem_layout">

        <com.ortiz.touchview.TouchImageView
            android:id="@+id/picture_of_file"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            />

        <LinearLayout
            android:id="@+id/linearlayout_botttom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">


            <TextView
                android:id="@+id/filename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_transparent"
                android:paddingHorizontal="@dimen/margin_horizontal"
                android:paddingVertical="@dimen/text_padding_vertical"
                android:text="@string/filename"
                android:textColor="?attr/colorOnSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/black_transparent"
                android:paddingHorizontal="@dimen/margin_horizontal"
                android:paddingVertical="@dimen/text_padding_vertical">

                <TextView
                    android:id="@+id/timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/timestamp"
                    android:textColor="?attr/colorOnSecondary" />

                <TextView
                    android:id="@+id/fileSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filesize"
                    android:textColor="?attr/colorOnSecondary"

                    />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>